hide code cells

--- a/10_Oct/1403_気体の分子運動論.ipynb
+++ b/10_Oct/1403_気体の分子運動論.ipynb
@@ -6,7 +6,8 @@
       "name": "1403_気体の分子運動論.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPPKBNdhVEviDKmJwEQLYq1",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMEoPaqNGhFVH9um0TJ3/bw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,11 +62,11 @@
       "metadata": {
         "id": "L8ArvFjDj49M",
         "cellView": "form",
-        "outputId": "7607a3b4-24f3-45e0-b1d1-84c04ac2bed7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "7607a3b4-24f3-45e0-b1d1-84c04ac2bed7"
       },
       "source": [
         "#@title Boyle's law: p V= constant / p is proportional to  1/V\n",
@@ -95,11 +96,11 @@
       "metadata": {
         "cellView": "form",
         "id": "VnO5iw03k3Fu",
-        "outputId": "cf530f29-d263-4f57-9e37-9963eb5c23aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
-        }
+        },
+        "outputId": "cf530f29-d263-4f57-9e37-9963eb5c23aa"
       },
       "source": [
         "#@title A graph of Boyle's original: data https://en.wikipedia.org/wiki/Boyle%27s_law\n",
@@ -140,11 +141,11 @@
       "metadata": {
         "id": "WlKr5eF3kavD",
         "cellView": "form",
-        "outputId": "62a7e097-0950-4db5-935f-ddbdc7bc48d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "62a7e097-0950-4db5-935f-ddbdc7bc48d1"
       },
       "source": [
         "#@title Charles's law: V/T = constant / V is proportional to T\n",
@@ -234,11 +235,11 @@
       "metadata": {
         "id": "rPBOrxm5HpRb",
         "cellView": "form",
-        "outputId": "0c11ae5e-a732-470f-f83c-76b21523cf70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "0c11ae5e-a732-470f-f83c-76b21523cf70"
       },
       "source": [
         "#@title Gay Lussac's Law: P/T = constant. P is proportional to T\n",
@@ -268,11 +269,11 @@
       "metadata": {
         "id": "g35sq0sXT-Gb",
         "cellView": "form",
-        "outputId": "e9e54313-dcce-4c79-d720-9f07020817e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "e9e54313-dcce-4c79-d720-9f07020817e3"
       },
       "source": [
         "#@title Gay-Lussac's Law\n",
@@ -326,11 +327,11 @@
       "metadata": {
         "id": "E8T7MpzqQiUG",
         "cellView": "form",
-        "outputId": "8caae8e5-d2a2-45ac-8bdf-22502c9037ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 162
-        }
+        },
+        "outputId": "8caae8e5-d2a2-45ac-8bdf-22502c9037ad"
       },
       "source": [
         "#@title ボイル-シャルル法則の適応例\n",
@@ -402,11 +403,11 @@
       "metadata": {
         "id": "dnoVIiYdgaIK",
         "cellView": "form",
-        "outputId": "2cdb0a2e-d85c-446f-862d-06b80b7ad910",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 367
-        }
+        },
+        "outputId": "2cdb0a2e-d85c-446f-862d-06b80b7ad910"
       },
       "source": [
         "#@title 標準状態におけるボイル-シャルルの法則から理想気体の状態方程式へ\n",
@@ -502,11 +503,11 @@
       "metadata": {
         "id": "3zVErX9hyfT1",
         "cellView": "form",
-        "outputId": "9c2a6eef-ed9a-48a9-eada-460d49027965",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
-        }
+        },
+        "outputId": "9c2a6eef-ed9a-48a9-eada-460d49027965"
       },
       "source": [
         "#@title 気体分子の熱運動のシミュレーション: choose a small red one.\n",
@@ -565,11 +566,11 @@
       "metadata": {
         "id": "m2pYG_PL5MQz",
         "cellView": "form",
-        "outputId": "ccc497ab-ed98-4381-c229-f1d12f08c676",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 245
-        }
+        },
+        "outputId": "ccc497ab-ed98-4381-c229-f1d12f08c676"
       },
       "source": [
         "#@title 立方体に閉じ込めらた気体\n",
@@ -631,11 +632,11 @@
       "metadata": {
         "cellView": "form",
         "id": "3zils7SzEe7d",
-        "outputId": "38743fdd-a655-4d60-f957-8dea11512310",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 223
-        }
+        },
+        "outputId": "38743fdd-a655-4d60-f957-8dea11512310"
       },
       "source": [
         "#@title 一分子の壁への衝突(一次元)\n",
@@ -731,11 +732,11 @@
       "metadata": {
         "id": "umv7jc1n6UHV",
         "cellView": "form",
-        "outputId": "939fbee5-b7d7-4619-b4b3-6f75f809bf63",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 205
-        }
+        },
+        "outputId": "939fbee5-b7d7-4619-b4b3-6f75f809bf63"
       },
       "source": [
         "#@title 分子が受ける力積: I_0 / 壁に与える力積: I\n",
@@ -841,11 +842,11 @@
       "metadata": {
         "id": "oTnq2Rbd6az0",
         "cellView": "form",
-        "outputId": "ccc497ab-ed98-4381-c229-f1d12f08c676",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 245
-        }
+        },
+        "outputId": "ccc497ab-ed98-4381-c229-f1d12f08c676"
       },
       "source": [
         "#@title 3次元への拡張\n",
@@ -954,11 +955,11 @@
       "metadata": {
         "id": "FZaeoZAsx-eZ",
         "cellView": "form",
-        "outputId": "a6c076d9-29e2-43ab-bb12-85cfc1c67843",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
-        }
+        },
+        "outputId": "a6c076d9-29e2-43ab-bb12-85cfc1c67843"
       },
       "source": [
         "#@title 再現: 教科書 p166, 例3の直下の文章\n",
@@ -996,13 +997,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "K1MbKF2zcOLY",
-        "outputId": "7b0b2447-f726-4bf4-bfbf-c9acc794b0fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 484
-        }
+        },
+        "cellView": "form",
+        "outputId": "7b0b2447-f726-4bf4-bfbf-c9acc794b0fc"
       },
       "source": [
+        "#@title\n",
         "%%svg\n",
         "https://upload.wikimedia.org/wikipedia/commons/0/01/MaxwellBoltzmann-en.svg"
       ],
@@ -1035,13 +1038,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "j-woOxcJd8eb",
-        "outputId": "579d6a23-557c-4a4e-82ff-3ab0d6cf5282",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
-        }
+        },
+        "cellView": "form",
+        "outputId": "579d6a23-557c-4a4e-82ff-3ab0d6cf5282"
       },
       "source": [
+        "#@title\n",
         "%%svg\n",
         "https://upload.wikimedia.org/wikipedia/commons/b/bd/Boltzmann_distribution_graph.svg"
       ],
@@ -1198,11 +1203,11 @@
       "metadata": {
         "cellView": "form",
         "id": "hRDF4xFxMym6",
-        "outputId": "2d9a243e-ff60-430a-a623-351ebbf42c1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
-        }
+        },
+        "outputId": "2d9a243e-ff60-430a-a623-351ebbf42c1a"
       },
       "source": [
         "#@title 理想気体の相互作用\n",
@@ -1280,11 +1285,11 @@
       "metadata": {
         "id": "pcZ4amj8ODVU",
         "cellView": "form",
-        "outputId": "0909d6f6-933d-4341-8343-5b111aaa5d5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 162
-        }
+        },
+        "outputId": "0909d6f6-933d-4341-8343-5b111aaa5d5e"
       },
       "source": [
         "#@title 内部エネルギーの変化は絶対温度だけで決まります\n",
@@ -1455,11 +1460,11 @@
       "metadata": {
         "cellView": "form",
         "id": "LY4hHpzGJa8d",
-        "outputId": "984b82ec-3159-4437-c25c-0588a42c640c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
-        }
+        },
+        "outputId": "984b82ec-3159-4437-c25c-0588a42c640c"
       },
       "source": [
         "#@title 二原子分子の運動エネルギー: State > Oxygen in Gas\n",
