--- a/10_Oct/1404_ファンデルワールスの状態方程式.ipynb
+++ b/10_Oct/1404_ファンデルワールスの状態方程式.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "1404_ファンデルワールスの状態方程式.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNS8wh6tYYMyI5RCtg/lCir",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNTg8awahCfWoYhJ+qRx+ip",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,11 +57,11 @@
       "metadata": {
         "id": "Iui8bWNQGr63",
         "cellView": "form",
-        "outputId": "84cce587-98d2-4f02-bec4-c25c4ba68236",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "84cce587-98d2-4f02-bec4-c25c4ba68236"
       },
       "source": [
         "#@title van der Waals equation of state\n",
@@ -128,11 +129,11 @@
       "metadata": {
         "id": "9Amj3g2bgo6m",
         "cellView": "form",
-        "outputId": "01c4c687-9eb2-4df7-cccf-845171d90165",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 512
-        }
+        },
+        "outputId": "01c4c687-9eb2-4df7-cccf-845171d90165"
       },
       "source": [
         "#@title 気液\b二相状態\n",
@@ -163,17 +164,6 @@
       "source": [
         "line ac: the saturated vaper, \b飽和気圧"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9XZWs-1Ocdkd"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
