clean up after lecture

--- a/10_Oct/1401_熱と温度.ipynb
+++ b/10_Oct/1401_熱と温度.ipynb
@@ -6,7 +6,7 @@
       "name": "1401_熱と温度",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMEjEmYb8vIEUqXPvI22r8q",
+      "authorship_tag": "ABX9TyOjSHEFdowuJnKTtVP05tMw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,6 +77,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q2cHpFHO9wZr"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "kQcu5SsYneSe"
@@ -97,7 +108,7 @@
         "> 図の中の「Bが失う熱量 $Q_{\\rm B}$」は間違い,  **「Bが得る熱量」** です\n",
         "\n",
         ">> 他に熱の逃げ場がなければ，**熱量保存則**   \n",
-        ">> $$\\left( -Q_{\\rm A} \\right) + \\left( + Q_{\\rm A} \\right)  =0$$  \n",
+        ">> $$\\left( -Q_{\\rm A} \\right) + \\left( + Q_{\\rm B} \\right)  =0$$  \n",
         ">> が成り立ちます\n",
         "---\n",
         "- [Dr.あゆみの物理教室](https://studyphys.com/conservation-of-heat/)\n"
@@ -271,27 +282,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EqTr4g0osbNO"
-      },
-      "source": [
-        "\n",
-        "![Breaking Symmetry: Phase Transitions, Massive Excitations, and Gravitational Domains](https://www.researchgate.net/profile/Fikriye_Idil_Kaya/publication/321545557/figure/fig4/AS:568296684650496@1512503896521/Phase-transitions-of-water-Temperature-vs-Time-or-Heat-graph.png)\n",
-        "\n",
-        "\n",
-        "- ice+water: 固体(固相, solid) $\\Longleftrightarrow$ 液体(液相, liquid)\n",
-        "  - $\\Rightarrow$:: 融解\n",
-        "  - $\\Leftarrow$:: 凝固\n",
-        "- water+vapor:: 液体(液相, liquid) $\\Longleftrightarrow$ 気体(気相, gas)\n",
-        "  - $\\Rightarrow$: 蒸発\n",
-        "  - $\\Leftarrow$: 凝縮\n",
-        "\n",
-        "---\n",
-        "[Breaking Symmetry: Phase Transitions, Massive Excitations, and Gravitational Domains](https://www.researchgate.net/publication/321545557_Breaking_Symmetry_Phase_Transitions_Massive_Excitations_and_Gravitational_Domains)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "3UuMWQIE3zDL"
       },
       "source": [
@@ -334,6 +324,27 @@
         "    - vaport $\\rightarrow$ water:: 凝縮熱\n",
         "\n",
         "  - 融解熱, 凝固熱: 分子間力に打ち勝って(完全に)自由になるために必要なエネルギー"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EqTr4g0osbNO"
+      },
+      "source": [
+        "\n",
+        "![Breaking Symmetry: Phase Transitions, Massive Excitations, and Gravitational Domains](https://www.researchgate.net/profile/Fikriye_Idil_Kaya/publication/321545557/figure/fig4/AS:568296684650496@1512503896521/Phase-transitions-of-water-Temperature-vs-Time-or-Heat-graph.png)\n",
+        "\n",
+        "\n",
+        "- ice+water: 固体(固相, solid) $\\Longleftrightarrow$ 液体(液相, liquid)\n",
+        "  - $\\Rightarrow$:: 融解\n",
+        "  - $\\Leftarrow$:: 凝固\n",
+        "- water+vapor:: 液体(液相, liquid) $\\Longleftrightarrow$ 気体(気相, gas)\n",
+        "  - $\\Rightarrow$: 蒸発\n",
+        "  - $\\Leftarrow$: 凝縮\n",
+        "\n",
+        "---\n",
+        "[Breaking Symmetry: Phase Transitions, Massive Excitations, and Gravitational Domains](https://www.researchgate.net/publication/321545557_Breaking_Symmetry_Phase_Transitions_Massive_Excitations_and_Gravitational_Domains)"
       ]
     },
     {
@@ -502,14 +513,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 475
         },
-        "outputId": "976f14fd-09fe-4b3e-c8be-1d28458abc3e"
+        "outputId": "366a44ab-6de3-47a0-f84d-c8ad9019d7d6"
       },
       "source": [
         "#@title 熱運動(P,V,T)\n",
         "%%html\n",
         "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter/latest/states-of-matter_en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -521,9 +532,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     },
@@ -654,14 +663,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 336
         },
-        "outputId": "1a57f4c3-7676-4cf9-e2b4-846674be6da0"
+        "outputId": "f69a0497-6444-483d-dece-fb15c0f32ede"
       },
       "source": [
         "#@title 仕事と熱の関係\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/ZbZjo7zhWFk\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -673,9 +682,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     },
@@ -688,14 +695,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 336
         },
-        "outputId": "20108986-58fc-458c-8071-6352721c0f99"
+        "outputId": "b543a989-f9ea-47c1-8ecc-018b573edfd4"
       },
       "source": [
         "#@title 仕事等量の測定: 英国人ジュールが用いた手法\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MBrTDKc9YZ0\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -707,9 +714,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     },
@@ -744,7 +749,7 @@
         "id": "GvY06JTqV8NW"
       },
       "source": [
-        "#### 熱容量, Heat capacity $C$: ${\\rm J/K}$"
+        "#### 熱容量, Heat capacity $C$: ${\\rm J/K, J/C^\\circ}$"
       ]
     },
     {
@@ -753,7 +758,7 @@
         "id": "KY9kLkkyMzgp"
       },
       "source": [
-        "> Q. 熱($\\Delta Q$)を加えた分だけ, 物体の温度変化($\\Delta T$)する熱の区間の名称を思い出してください.\n",
+        "> Q. 熱($\\Delta Q$)を加えた分だけ, 物体が温度変化($\\Delta T$)する熱の区間の名称を思い出してください.\n",
         "\n",
         "熱($\\Delta Q$)の出入りによって, 物体が異なれば(水,油,金属等)の温度変化($\\Delta T$)は異なります.  \n",
         "\n",
