clean up after lecture

--- a/10_Oct/1403_気体の分子運動論.ipynb
+++ b/10_Oct/1403_気体の分子運動論.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMEoPaqNGhFVH9um0TJ3/bw",
+      "authorship_tag": "ABX9TyOC2NCHyXTk70eTXTTJivmF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "id": "mTgJYFsCOL8Z"
       },
       "source": [
-        "## 理想気体の運動方程式"
+        "## 理想気体の状態方程式"
       ]
     },
     {
@@ -173,6 +173,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "2qMCmiuXHj2O"
+      },
+      "source": [
+        "![wikipedia: Charles's law](https://upload.wikimedia.org/wikipedia/commons/e/e4/Charles_and_Gay-Lussac%27s_Law_animated.gif)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7sOBysWPmLFT"
       },
       "source": [
@@ -206,15 +215,6 @@
         "\n",
         "ということができます.\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2qMCmiuXHj2O"
-      },
-      "source": [
-        "![wikipedia: Charles's law](https://upload.wikimedia.org/wikipedia/commons/e/e4/Charles_and_Gay-Lussac%27s_Law_animated.gif)"
       ]
     },
     {
@@ -555,7 +555,7 @@
         "について考えていきます.\n",
         "\n",
         "ここで, この立方体の中では $n$ mol の気体が 圧力 $P$ を持っているものとします.   \n",
-        "圧力は容器の内部では, パスカルの原理を真似て, 立方体のどの面で圧力を測っても同じものとします.\n",
+        "圧力は容器の内部では, パスカルの原理より, 立方体のどの面で圧力を測っても同じものとします.\n",
         "\n",
         "どの面を見ても同じなら, 3次元($xyz$)のうち一次元の($x$)の議論を   \n",
         "しっかりやってから, 3次元に拡張することが可能です.\n"
@@ -617,7 +617,7 @@
         "とします.\n",
         "\n",
         "最後の条件から\n",
-        "> 壁に当たる前後の一つの分子/分子の速さの\b比は等しい\n",
+        "> 壁に当たる前後の一つの原子/分子の速さの\b比は等しい\n",
         ">>  衝突前後の速さは等しいが, 方向が真逆\n",
         "\n",
         "ということがいえます.\n",
@@ -817,7 +817,7 @@
         "- 一往復に要する時間 $: \\quad \\dfrac{2L}{v_x}$\n",
         "- $t$ 秒間にこの同じ分子が衝突する回数 $: \\quad \\dfrac{t}{\\frac{2L}{v_x}} = \\dfrac{v_x t}{2 L}$\n",
         "\n",
-        "$t$ 秒間の間に一個の分子が壁に及ぼす力積は\n",
+        "$t$ 秒間の間に一個の分子が壁に及ぼす力積は p165(14.20)\n",
         "\\begin{align*}\n",
         "I_{t:1} = 2mv_x \\times \\dfrac{v_x t}{2L} = \\dfrac{mv_x^2}{L} t.\n",
         "\\end{align*}\n",
@@ -892,7 +892,7 @@
         "これを3次元の速度の大きさの二乗を含む ${v^2}$ も平均化して当てはめると\n",
         "($<>$は平均化の記号です)\n",
         "\\begin{align*}\n",
-        "\\bar{v^2}\n",
+        "<v^2>\n",
         "&= <v_x^2 + v_y^2 + v_z^2>\\\\\n",
         "&=<v_x^2> + <v_y^2> + <v_z^2>\\\\\n",
         "&=3 <v_x^2>\\\\\n",
@@ -909,7 +909,7 @@
         "id": "cmwRCEHUveuu"
       },
       "source": [
-        "ところで, 閉じ込めらた理想期待の運動エネルギーを$E$として数え上げると\n",
+        "ところで, 閉じ込めらた理想気体の運動エネルギーを$E$として数え上げると\n",
         "\\begin{align*}\n",
         "E = n N_{\\rm A}\\left(\\dfrac{1}{2} m <v^2>\\right).\n",
         "\\end{align*}"
@@ -924,7 +924,7 @@
         "これらを利用すると\n",
         "\\begin{align*}\n",
         "p &= \\dfrac{n N_{\\rm A} m<v_x^2>}{V}\\\\\n",
-        "&=  \\dfrac{n N_{\\rm A} m\\frac{<v>}{3}}{V}\\\\\n",
+        "&=  \\dfrac{n N_{\\rm A} m\\frac{<v^2>}{3}}{V}\\\\\n",
         "p V &= \\dfrac{1}{3} n N_{\\rm A} m <v^2>\\\\\n",
         "pV &= \\dfrac{2}{3} E\n",
         "\\end{align*}"
@@ -943,7 +943,7 @@
         "\n",
         "また数え上げた運動エネルギー $E$ を用いると\n",
         "\\begin{align*}\n",
-        "\\dfrac{1}{2} m <v^2> &= \\dfrac{3}{2} \\dfrac{R}{N_{\\rm A}} T\\\\\n",
+        "\\dfrac{1}{2} m <v^2> &= \\dfrac{E}{nN_{\\rm A}}= \\dfrac{3}{2} \\dfrac{R}{N_{\\rm A}} T\\\\\n",
         "&= \\dfrac{3}{2} k_{\\rm B} T\n",
         "\\end{align*}\n",
         "\n",
@@ -1255,7 +1255,7 @@
         "石がガラスにぶつかるように運動エネルギーから他の物体に  \n",
         "直接仕事を加えることはできません.   \n",
         "\n",
-        "そこで容器ないの運動エネルギーを  \n",
+        "そこで容器内の運動エネルギーを  \n",
         "容器にある気体分子の状態 **内部エネルギー $U$** を表現する量に置き換えることにします.\n",
         "\n",
         "\\begin{align*}\n",
@@ -1487,15 +1487,6 @@
             "tags": []
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "C8Bt72FjgA6y"
-      },
-      "source": [
-        ""
       ]
     },
     {
