add more references and equation

--- a/10_Oct/1403_気体の分子運動論.ipynb
+++ b/10_Oct/1403_気体の分子運動論.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOC2NCHyXTk70eTXTTJivmF",
+      "authorship_tag": "ABX9TyPa8u8jwgMs98KvSA2XzEVJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1028,6 +1028,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "oqTcqp0V7mef"
+      },
+      "source": [
+        "---\n",
+        "\n",
+        "- 基本的な導出方針は次の文献の p5　参照 https://arxiv.org/abs/1702.01411\n",
+        "- 原著論文はこちら https://www.jstor.org/stable/108968"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "KeA0dbiOb2qP"
       },
       "source": [
@@ -1078,17 +1090,68 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "vmr3LuB8dvGw"
+      },
+      "source": [
+        "<!-- ![https://en.wikipedia.org/wiki/Perfect_number](https://upload.wikimedia.org/wikipedia/commons/a/a4/ParticleMeanFreePath.PNG) -->\n",
+        "\n",
+        "<div>\n",
+        "<img src=\"https://upload.wikimedia.org/wikipedia/commons/a/a4/ParticleMeanFreePath.PNG\" alt=\"https://ja.wikipedia.org/wiki/%E5%B9%B3%E5%9D%87%E8%87%AA%E7%94%B1%E8%A1%8C%E7%A8%8B\" align=\"right\" width=\"200\"/>\n",
+        "</div>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "N-MQ-94leCOX"
       },
       "source": [
+        "最も簡単な条件\n",
+        "\n",
+        "- 二つの分子の半径が作る断面積 $\\pi d^2$]\n",
+        "- 距離 $L$ 進むと一回衝突する\n",
+        "\n",
+        "を用いると\n",
+        "\n",
         "\\begin{align*}\n",
         "N (\\pi d^2 \\cdot L) &= 1\\\\\n",
         "L = \\dfrac{1}{\\pi N d^2}\n",
         "\\end{align*}\n",
         "\n",
+        "---\n",
+        "$N$: 単位体積あたりの粒子の個数\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uqvAG9bHq1c4"
+      },
+      "source": [
+        "教科書ではこれに\n",
+        "- 二つの粒子間の相対速度の自乗平均速度 $\\sqrt{<v_r^2>}=\\sqrt{2}\\sqrt{<v^2>}$ \n",
+        "\n",
+        "を考慮しています。\n",
         "\\begin{align*}\n",
         "L = \\dfrac{1}{\\sqrt{2}\\pi N d^2}\n",
-        "\\end{align*}\n"
+        "\\end{align*}\n",
+        "\n",
+        "---\n",
+        "自乗平均速度\n",
+        "\\begin{align}\n",
+        "\\require{cancel}\n",
+        "\\vec{v_r} = \\vec{v} - \\vec{v_0}\n",
+        "&\n",
+        "\\left|\\vec{v_r}\\right|^2 \n",
+        "= \\vec{v}^2 + \\vec{v_0}^2 - 2 \\vec{v}\\vec{v_0}\\\\\n",
+        "%\n",
+        "\\left<\\vec{v_r}^2\\right> \n",
+        "&=\\left<\\vec{v}^2\\right> + \\left<\\vec{v_\\bcancel{0}}^2\\right>\n",
+        "- 2 \\cancelto{0}{\\left<\\vec{v}\\vec{v_0}\\right>}\n",
+        "= 2 \\left<\\vec{v}^2\\right>\n",
+        "%\n",
+        "%\\sqrt{\\dfrac{\\left<\\vec{v_r}^2\\right> }{\\left<\\vec{v}^2\\right>}} &= \\sqrt{2}\n",
+        "\\end{align}"
       ]
     },
     {
