add Boltzmann distribution

--- a/10_Oct/1403_気体の分子運動論.ipynb
+++ b/10_Oct/1403_気体の分子運動論.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPa8u8jwgMs98KvSA2XzEVJ",
+      "authorship_tag": "ABX9TyN6oZSH7zYUKOMF/IUaXVe7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1047,6 +1047,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "urWjjVtmDQpM"
+      },
+      "source": [
+        "$$\n",
+        "{\\displaystyle p_{i}\\propto e^{-{\\varepsilon _{i}}/{kT}}}\n",
+        "$$\n",
+        "\n",
+        "<div>\n",
+        "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Exponential_probability_density.svg/600px-Exponential_probability_density.svg.png\" alt=\"https://en.wikipedia.org/wiki/Boltzmann_distribution\" align=\"right\" width=\"350\"/>\n",
+        "</div>\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "j-woOxcJd8eb",
@@ -1093,8 +1109,6 @@
         "id": "vmr3LuB8dvGw"
       },
       "source": [
-        "<!-- ![https://en.wikipedia.org/wiki/Perfect_number](https://upload.wikimedia.org/wikipedia/commons/a/a4/ParticleMeanFreePath.PNG) -->\n",
-        "\n",
         "<div>\n",
         "<img src=\"https://upload.wikimedia.org/wikipedia/commons/a/a4/ParticleMeanFreePath.PNG\" alt=\"https://ja.wikipedia.org/wiki/%E5%B9%B3%E5%9D%87%E8%87%AA%E7%94%B1%E8%A1%8C%E7%A8%8B\" align=\"right\" width=\"200\"/>\n",
         "</div>"
