submit after lecture

--- a/10_Oct/1404_ファンデルワールスの状態方程式.ipynb
+++ b/10_Oct/1404_ファンデルワールスの状態方程式.ipynb
@@ -6,7 +6,7 @@
       "name": "1404_ファンデルワールスの状態方程式.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNTg8awahCfWoYhJ+qRx+ip",
+      "authorship_tag": "ABX9TyPItg3pnnk3K4tsdHUcRsZE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "LIPBtuhLHJPk"
+      },
+      "source": [
+        "理想気体の状態方程式\n",
+        "$$\n",
+        "PV = n R T\n",
+        "$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Z3SdQKta-0i0"
       },
       "source": [
@@ -44,45 +56,34 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7XyQEqsFhKLB"
-      },
-      "source": [
-        "![](https://upload.wikimedia.org/wikipedia/commons/e/e2/Van_der_Waals_Isotherms.PNG)"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "Iui8bWNQGr63",
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 336
+          "height": 621
         },
-        "outputId": "84cce587-98d2-4f02-bec4-c25c4ba68236"
+        "cellView": "form",
+        "outputId": "83b4abd0-8d0d-41b0-f211-e230341a7816"
       },
       "source": [
         "#@title van der Waals equation of state\n",
         "%%html\n",
-        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MDUkyxxKA8k\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+        "<iframe width=\"800\" height=\"600\" src=\"https://www.youtube-nocookie.com/embed/MDUkyxxKA8k\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MDUkyxxKA8k\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+              "<iframe width=\"800\" height=\"600\" src=\"https://www.youtube-nocookie.com/embed/MDUkyxxKA8k\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     },
@@ -93,18 +94,27 @@
       },
       "source": [
         "\\begin{align*}\n",
-        "pV &= nRT\\\n",
+        "p_{\\rm ideal}V_{\\rm ideal} &= nRT\\\n",
         "&\\begin{cases}\n",
-        "V_{\\rm ideal} < V_{\\rm real}: \n",
-        "&\\quad V_{\\rm ideal} + b \\dfrac{n}{V} = V_{\\rm real}\\\\\n",
         "p_{\\rm ideal} > p_{\\rm real}: \n",
         "&\\quad p_{\\rm real} + a \\dfrac{n}{V} \\dfrac{n}{V} = p_{\\rm ideal}\\\\\n",
+        "V_{\\rm ideal} < V_{\\rm real}: \n",
+        "&\\quad V_{\\rm ideal} + b n = V_{\\rm real}\n",
         "\\end{cases}\n",
         "\\end{align*}\n",
         "\n",
         "\\begin{align*}\n",
         "\\left( p + a \\dfrac{n^2}{V^2} \\right) \\left( V - nb\\right)& = nRT\n",
         "\\end{align*}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7XyQEqsFhKLB"
+      },
+      "source": [
+        "![](https://upload.wikimedia.org/wikipedia/commons/e/e2/Van_der_Waals_Isotherms.PNG)"
       ]
     },
     {
