--- a/11_Nov/1502_理想気体のモル熱容量.ipynb
+++ b/11_Nov/1502_理想気体のモル熱容量.ipynb
@@ -6,6 +6,7 @@
       "name": "1502_理想気体のモル熱容量.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -502,7 +503,7 @@
         "id": "zhSfBpydx_Pi"
       },
       "source": [
-        "#### 多原子分子のモル熱容量"
+        "### 多原子分子のモル熱容量"
       ]
     },
     {
