clean up after lecture

--- a/10_Oct/1404_ファンデルワールスの状態方程式.ipynb
+++ b/10_Oct/1404_ファンデルワールスの状態方程式.ipynb
@@ -6,7 +6,7 @@
       "name": "1404_ファンデルワールスの状態方程式.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPItg3pnnk3K4tsdHUcRsZE",
+      "authorship_tag": "ABX9TyOCyhxMNb24sW0ENnw9uscP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,23 +61,23 @@
         "id": "Iui8bWNQGr63",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 621
+          "height": 336
         },
         "cellView": "form",
-        "outputId": "83b4abd0-8d0d-41b0-f211-e230341a7816"
+        "outputId": "e876dfbd-5124-4588-b381-f7878300679a"
       },
       "source": [
         "#@title van der Waals equation of state\n",
         "%%html\n",
-        "<iframe width=\"800\" height=\"600\" src=\"https://www.youtube-nocookie.com/embed/MDUkyxxKA8k\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MDUkyxxKA8k\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<iframe width=\"800\" height=\"600\" src=\"https://www.youtube-nocookie.com/embed/MDUkyxxKA8k\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MDUkyxxKA8k\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
