clean up after lecture

--- a/10_Oct/1403_気体の分子運動論.ipynb
+++ b/10_Oct/1403_気体の分子運動論.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN6oZSH7zYUKOMF/IUaXVe7",
+      "authorship_tag": "ABX9TyMVdTvAvhsXwY3vNlIAWsWd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1122,7 +1122,7 @@
       "source": [
         "最も簡単な条件\n",
         "\n",
-        "- 二つの分子の半径が作る断面積 $\\pi d^2$]\n",
+        "- 二つの分子の半径が作る断面積 $\\pi d^2$\n",
         "- 距離 $L$ 進むと一回衝突する\n",
         "\n",
         "を用いると\n",
@@ -1154,7 +1154,7 @@
         "自乗平均速度\n",
         "\\begin{align}\n",
         "\\require{cancel}\n",
-        "\\vec{v_r} = \\vec{v} - \\vec{v_0}\n",
+        "\\vec{v_r} = \\vec{v} - \\vec{v_0}, \\qquad \n",
         "&\n",
         "\\left|\\vec{v_r}\\right|^2 \n",
         "= \\vec{v}^2 + \\vec{v_0}^2 - 2 \\vec{v}\\vec{v_0}\\\\\n",
