--- a/11_Nov/1503_熱力学の第二法則.ipynb
+++ b/11_Nov/1503_熱力学の第二法則.ipynb
@@ -6,7 +6,7 @@
       "name": "1503_熱力学の第二法則.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOBsZPj4hbG0z8jibKh0UNA",
+      "authorship_tag": "ABX9TyPUa95wA9KT0uz0Hn6CmpVo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,38 +272,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AA3Iw9DiWeUi"
-      },
-      "source": [
-        "$\\require{cancel}$\n",
-        "\\begin{align*}\n",
-        "\\eta\n",
-        "&= \\dfrac{W}{Q_2}&\\\\\n",
-        "&= \\dfrac{Q_2-Q_1}{Q_2} \\lneqq 1&\n",
-        "\\end{align*}"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NsWMmww1YR7h"
-      },
-      "source": [
-        "$\\require{cancel}$\n",
-        "吸熱 $Q_2$, 排熱 $Q_1$ がともに正の量であることに注意すれば\n",
-        "\\begin{align*}\n",
-        "\\bcancel{Q_2}-Q_1 \\lneqq \\bcancel{Q_2}&\\\\\n",
-        "Q_1 &\\gneqq 0&\n",
-        "\\end{align*}\n",
-        "このことから\n",
-        "> 排熱 $Q_1$ を零にすることはできない\n",
-        "\n",
-        "といえます."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "GyDJ3quge7aO"
       },
       "source": [
@@ -360,6 +328,47 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZizgWyMsIolU"
+      },
+      "source": [
+        "#### $\\eta\\lneqq 1$ からの導出"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AA3Iw9DiWeUi"
+      },
+      "source": [
+        "$\\require{cancel}$\n",
+        "\\begin{align*}\n",
+        "\\eta\n",
+        "&= \\dfrac{W}{Q_2}&\\\\\n",
+        "&= \\dfrac{Q_2-Q_1}{Q_2} \\lneqq 1&\n",
+        "\\end{align*}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NsWMmww1YR7h"
+      },
+      "source": [
+        "$\\require{cancel}$\n",
+        "吸熱 $Q_2$, 排熱 $Q_1$ がともに正の量であることに注意すれば\n",
+        "\\begin{align*}\n",
+        "\\bcancel{Q_2}-Q_1 \\lneqq \\bcancel{Q_2}&\\\\\n",
+        "Q_1 &\\gneqq 0&\n",
+        "\\end{align*}\n",
+        "このことから\n",
+        "> 排熱 $Q_1$ を零にすることはできない\n",
+        "\n",
+        "といえます."
       ]
     },
     {
@@ -427,13 +436,43 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "M2K1FYzR7LF0"
+        "id": "561gqc9_I8Ka"
       },
       "source": [
-        "$$\n",
-        "\\eta = \\dfrac{W}{Q_2}  \\lneqq 1\\\\\n",
-        "0 <W \\lneqq Q_2\n",
-        "$$"
+        "#### $\\eta\\lneqq 1$ からの導出"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KtFOIONVG4hJ"
+      },
+      "source": [
+        "\\begin{align*}\n",
+        "\\eta\n",
+        "= \\dfrac{W}{Q_2} = \\dfrac{Q_{\\rm 2:in}-Q_{\\rm 1:out}}{Q_{\\rm 2:in}} &\\lneqq 1\\\\\n",
+        "\\dfrac{Q_{\\rm 2:in}+Q_{\\rm 1:in}}{Q_{\\rm 2:in}} &\\lneqq 1\\\\\n",
+        "\\bcancel{1} + \\dfrac{Q_{\\rm 1:in}}{Q_{\\rm 2:in}} & \\lneqq \\bcancel{1}\\\\\n",
+        "\\dfrac{Q_{\\rm 1:in}}{-Q_{\\rm 2:out}} & \\lneqq 0\n",
+        "\\end{align*}\n",
+        "\n",
+        "If $Q_{\\rm 1:in} > 0 $, and then $-Q_{\\rm 2:out}< 0$, such that $Q_{\\rm 2:out}> 0$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FYOgI1ofC8U_"
+      },
+      "source": [
+        "\\begin{align*}\n",
+        "\\eta\n",
+        "&= \\dfrac{W}{Q_2} = \\dfrac{W_{\\rm out}}{Q_{\\rm 2:in}} \\lneqq 1\\\\\n",
+        "  W_{\\rm out}&\\lneqq Q_{\\rm 2:in}\\\\\n",
+        "  -W_{\\rm out}&\\gneqq - Q_{\\rm 2:in}\\\\\n",
+        "  W_{\\rm in} &\\gneqq  Q_{\\rm 2:out} > 0\\\\   \n",
+        "  W_{\\rm in} &\\gneqq  0\n",
+        "\\end{align*}"
       ]
     },
     {
